--- a/css/style.css
+++ b/css/style.css
@@ -371,8 +371,20 @@ p {
   font-size: 12px;
   letter-spacing: 0.1em;
   font-weight: 500;
-  margin-top: 0;
+  margin-top: 32px;
   text-transform: uppercase;
+}
+
+#footer h1 {
+  font-size: 32px;
+  margin-bottom: 12px;
+  text-transform: uppercase;
+}
+
+#footer h3 {
+  font-size: 24px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 .credits {
